--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,18 +1,21 @@
 {
-	"name": "CPP Container",
+	"name": "Rust Container",
 	"dockerComposeFile": "docker-compose.yml",
-	"service": "cpp",
+	"service": "rust",
 	"workspaceFolder": "/home/node/works",
 	"remoteUser": "node",
 	// If you want to install some extensions (for VSCode), you have to write down the extension ids here.
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"franneck94.c-cpp-runner",
-				"ms-vscode.cpptools",
 				"esbenp.prettier-vscode",
 				"mosapride.zenkaku",
-				"mhutchie.git-graph"
+				"rust-lang.rust-analyzer",
+				"JScearcy.rust-doc-viewer",
+				"swellaby.vscode-rust-test-adapter",
+				"serayuzgur.crates",
+				"tamasfe.even-better-toml",
+				"vadimcn.vscode-lldb"
 			]
 		}
 	}
