--- a/frontend(next)/Dockerfile
+++ b/frontend(next)/Dockerfile
@@ -1,6 +1,8 @@
 FROM node:18
 # Install basic development tools
-RUN apt update && apt install -y less man-db sudo
+RUN apt update && \
+    apt upgrade -y && \
+    apt install -y less man-db sudo
 
 # Ensure default `node` user has access to `sudo`
 ARG USERNAME=node
